--- a/coloring/templates/coloring/new_interaction.html
+++ b/coloring/templates/coloring/new_interaction.html
@@ -436,10 +436,15 @@
 			}
 
 			function saveDateToGallery() {
+				var savedDates = JSON.parse(localStorage.getItem("savedDates"));
+				if (savedDates == null) {
+					savedDates = [];
+				}
 				var date = new Date();
 				var [month, day, year] = [date.getMonth() + 1, date.getDate(), date.getFullYear()];
 				var savedDate = "" + month + "-" + day + "-" + year;
-				localStorage.setItem("savedDate", savedDate);
+				savedDates.push(savedDate);
+				localStorage.setItem("savedDates", JSON.stringify(savedDates));
 			}
 	</script>
 </body>
