--- a/coloring/templates/coloring/colorPicker.html
+++ b/coloring/templates/coloring/colorPicker.html
@@ -42,89 +42,111 @@
 			background: #E29578;
 		}
 
-		.box {
-			width: 550px;
-			height: 550px;
+		.parallelogram {
+			width: 100px;
+			height: 250px;
 			background: #f1f1f1;
 			padding: 5px;
-			margin: 10px 10px 10px 10px;
-			border: 5px solid #000000;
+			margin: 10px 20px 20px 10px;
+            transform: skew(-20deg);
 		}
+        .parallelogramLarge {
+            width: 120px;
+			height: 300px;
+			background: #f1f1f1;
+			padding: 5px;
+			margin: 10px 20px 20px 10px;
+            transform: skew(-20deg) translateY(-30px) scale(1.05);
+            filter: drop-shadow(5px 5px 10px black);
+        }
 	</style>
 </head>
 <body>
 	<div class="container-fluid">
-		<div class="row align-items-center" id = 'titlePlate'>
-			<div class="col-1">
-				<a href = '/coloring/home' class = 'btn btn-secondary' rolw = 'button' aria-pressed = 'true'>
-					<svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="currentColor" class="bi bi-house-door-fill" viewBox="0 0 16 16">
-  						<path d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5z"/>
-					</svg>
+        <div class="row align-items-center" id = 'titlePlate' style = "border: 5px solid #000000;">
+			<div class="col-2">
+				<a href = '/coloring/new_interaction' class = 'btn btn-secondary d-flex justify-content-center' rolw = 'button' aria-pressed = 'true'>
+					<svg xmlns="http://www.w3.org/2000/svg" width="120" height="120" fill="currentColor" class="bi bi-x-circle-fill" viewBox="0 0 16 16">
+                        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z"/>
+                    </svg>
 				</a>
 			</div>
-			<div class="col-11 d-flex justify-content-center">
-				<h1 class = 'align-items-center'> Color Picker </h1>
+			<div class="col-10 d-flex justify-content-center" style = "border-left: 5px solid #000000">
+				<h1 style = "font-size: 8rem"> Color Picker </h1>
 			</div>
-		</div>
+        </div>
 	</div>
 	<div class="container-fluid" style="height: 95vh; background-image: url(./../static/coloring/images/Gallery.jpeg); background-size: 100% 100%;">
-        <div style="padding: 50px 0px ;">
+        <div style="padding: 50px 50px 50px 50px;">
         <div class = 'container-fluid' style="height: 80vh">
-        <div class = "row" style = "height: 14%">
-            <button class = "col btn btn-secondary" style = 'background-color: #FF0000'></button>
-            <button class = "col btn btn-secondary" style = 'background-color: #FF8181'></button>
-            <button class = "col btn btn-secondary" style = 'background-color: #9C0303'></button>
+        <div class = "row" style = "height: 14%; margin: 0 0 20px 20px;">
+            <div id = "#FF0000" onclick = "color('#FF0000')" class = "col parallelogram" style = 'background-color: #FF0000'></div>
+            <div id = "#FF8181" onclick = "color('#FF8181')" class = "col parallelogram" style = 'background-color: #FF8181'></div>
+            <div  id = "#9C0303" onclick = "color('#9C0303')" class = "col parallelogram" style = 'background-color: #9C0303'></div>
         </div>
-        <div style="padding: 10px 0px ;"></div>
-        <div class = "row" style = "height: 14%">
-            <button class = "col btn btn-secondary" style = 'background-color: #FF8A00'></button>
-            <button class = "col btn btn-secondary" style = 'background-color: #FFC581'></button>
-            <button class = "col btn btn-secondary" style = 'background-color: #904E00'></button>
+        <div class = "row" style = "height: 14%; margin: 0 0 20px 20px;">
+            <div id = "#FF8A00" onclick = "color('#FF8A00')" class = "col parallelogram" style = 'background-color: #FF8A00'></div>
+            <div id = "#FFC581" onclick = "color('#FFC581')" class = "col parallelogram" style = 'background-color: #FFC581'></div>
+            <div id = "#904E00" onclick = "color('#904E00')" class = "col parallelogram" style = 'background-color: #904E00'></div>
         </div>
-        <div style="padding: 10px 0px ;"></div>
-        <div class = "row" style = "height: 14%">
-            <button class = "col btn btn-secondary" style = 'background-color: #FAFF00'></button>
-            <button class = "col btn btn-secondary" style = 'background-color: #FFF492'></button>
-            <button class = "col btn btn-secondary" style = 'background-color: #A99801'></button>
+        <div class = "row" style = "height: 14%; margin: 0 0 20px 20px;">
+            <div id = "#FAFF00" onclick = "color('#FAFF00')" class = "col parallelogram" style = 'background-color: #FAFF00'></div>
+            <div id = "#FFF492" onclick = "color('#FFF492')" class = "col parallelogram" style = 'background-color: #FFF492'></div>
+            <div id = "#A99801" onclick = "color('#A99801')" class = "col parallelogram" style = 'background-color: #A99801'></div>
         </div>
-        <div style="padding: 10px 0px ;"></div>
-        <div class = "row" style = "height: 14%">
-            <button class = "col btn btn-secondary" style = 'background-color: #05FF00'></button>
-            <button class = "col btn btn-secondary" style = 'background-color: #AEFF92'></button>
-            <button class = "col btn btn-secondary" style = 'background-color: #009806'></button>
+        <div class = "row" style = "height: 14%; margin: 0 0 20px 20px;">
+            <div id = "#05FF00" onclick = "color('#05FF00')" class = "col parallelogram" style = 'background-color: #05FF00'></div>
+            <div id = "#AEFF92" onclick = "color('#AEFF92')" class = "col parallelogram" style = 'background-color: #AEFF92'></div>
+            <div id = "#009806" onclick = "color('#009806')" class = "col parallelogram" style = 'background-color: #009806'></div>
         </div>
-        <div style="padding: 10px 0px ;"></div>
-        <div class = "row" style = "height: 14%">
-            <button class = "col btn btn-secondary" style = 'background-color: #00A3FF'></button>
-            <button class = "col btn btn-secondary" style = 'background-color: #9CDBFF'></button>
-            <button class = "col btn btn-secondary" style = 'background-color: #0075B7'></button>
+        <div class = "row" style = "height: 14%; margin: 0 0 10px 10px">
+            <div id = "#00A3FF" onclick = "color('#00A3FF')" class = "col parallelogram" style = 'background-color: #00A3FF'></div>
+            <div id = "#9CDBFF" onclick = "color('#9CDBFF')" class = "col parallelogram" style = 'background-color: #9CDBFF'></div>
+            <div id = "#0075B7" onclick = "color('#0075B7')" class = "col parallelogram" style = 'background-color: #0075B7'></div>
         </div>
-        <div style="padding: 10px 0px ;"></div>
-        <div class = "row" style = "height: 14%">
-            <button class = "col btn btn-secondary" style = 'background-color: #9E00FF'></button>
-            <button class = "col btn btn-secondary" style = 'background-color: #DDA6FF'></button>
-            <button class = "col btn btn-secondary" style = 'background-color: #4F0080'></button>
+        <div class = "row" style = "height: 14%; margin: 0 0 20px 20px;">
+            <div id = "#9E00FF" onclick = "color('#9E00FF')" class = "col parallelogram" style = 'background-color: #9E00FF'></div>
+            <div id = "#DDA6FF" onclick = "color('#DDA6FF')" class = "col parallelogram" style = 'background-color: #DDA6FF'></div>
+            <div id = "#4F0080" onclick = "color('#4F0080')" class = "col parallelogram" style = 'background-color: #4F0080'></div>
         </div>
-        <div style="padding: 10px 0px ;"></div>
-        <div class = "row" style = "height: 14%">
-            <button class = "col btn btn-secondary" style = 'background-color: #000000'></button>
-            <button class = "col btn btn-secondary" style = 'background-color: #838383'></button>
-            <button class = "col btn btn-secondary" style = 'background-color: #FFFFFF'></button>
+        <div class = "row" style = "height: 14%; margin: 0 0 20px 20px;">
+            <div id = "#000000" onclick = "color('#000000')" class = "col parallelogram" style = 'background-color: #000000'></div>
+            <div id = "#FFFFFF" onclick = "color('#FFFFFF')" class = "col parallelogram" style = 'background-color: #838383'></div>
+            <div id = "#FFFFFF" onclick = "color('#FFFFFF')" class = "col parallelogram" style = 'background-color: #FFFFFF'></div>
         </div>
 	</div>
     </div>
     </div>
+    
 <script>
+    var savedColor;
+	function color(hex) {
+        document.getElementById(hex).className = "col parallelogramLarge";
+    	savedColor = hex; 
+        deselect();
+        saveToNewInteraction();
+ 	}
+
+    const allColors = ["#FF0000", "#FF8181", "#9C0303", 
+                    "#FF8A00", "#FFC581", "#904E00",
+                    "#FAFF00", "#FFF492", "#A99801", 
+                    "#05FF00", "#AEFF92", "#009806",  
+                    "#00A3FF", "#9CDBFF", "#0075B7",
+                    "#9E00FF", "#DDA6FF", "#4F0080", 
+                    "#000000", "#FFFFFF", "#FFFFFF"];
+	
+    function deselect() {
+        for (let i = 0; i < 21; i++) {
+            if (savedColor != allColors[i]) {
+                var currColor = allColors[i];
+                document.getElementById(currColor).className = "col parallelogram";
+            }
+        }
+	}
+
     function saveToNewInteraction() {
-        var savedPics = JSON.parse(localStorage.getItem("savedPics"));
-        if (savedPics == null) {
-            savedPics = [];
-        }
-        savedPics.push(picToSave);
-        console.log(savedPics);
-        localStorage.setItem("savedPics", JSON.stringify(savedPics));
-        location.href = 'gallery'
-        }
+        localStorage.setItem("savedColor", davedColor);
+    }
 </script>
 </body>
 </html>
