squash new interaction bug

--- a/coloring/templates/coloring/colorPicker.html
+++ b/coloring/templates/coloring/colorPicker.html
@@ -163,7 +163,7 @@
 	}
 
     function saveToNewInteraction() {
-        localStorage.setItem("savedColor", savedColor);
+        sessionStorage.setItem("color", savedColor);
     }
 
     function returnToDrawPad() {
