--- a/coloring/templates/coloring/new_interaction.html
+++ b/coloring/templates/coloring/new_interaction.html
@@ -52,7 +52,7 @@
 	function clearImage() {};
 	var canvas, saveCanvas;
 	var mainScope, saveScope;
-	var colorFromPicker = localStorage.getItem("selectedColor");
+	var colorFromPicker;
 	window.onload = function() {
 		canvas = document.getElementById('myCanvas');
 		saveCanvas = document.getElementById("saveCanvas");
