add quick fix to gallery bug

--- a/coloring/templates/coloring/gallery.html
+++ b/coloring/templates/coloring/gallery.html
@@ -109,6 +109,8 @@
 	<script>
 		
 		window.onload = function() {
+		// localStorage.setItem("savedPics", JSON.stringify([]));
+		// localStorage.setItem("savedDates", JSON.stringify([]));
 		var savedPics = JSON.parse(localStorage.getItem("savedPics"));
 		var savedDates = JSON.parse(localStorage.getItem("savedDates"));
 		var postItCanvases = [];
