squash bug where new_interaction crashes when local and session storage are cleared

--- a/coloring/templates/coloring/gallery.html
+++ b/coloring/templates/coloring/gallery.html
@@ -109,6 +109,8 @@
 	<script>
 		
 		window.onload = function() {
+		// localStorage.clear();
+		// sessionStorage.clear();
 		// localStorage.setItem("savedPics", JSON.stringify([]));
 		// localStorage.setItem("savedDates", JSON.stringify([]));
 		var savedPics = JSON.parse(localStorage.getItem("savedPics"));
