--- a/coloring/templates/coloring/gallery.html
+++ b/coloring/templates/coloring/gallery.html
@@ -84,7 +84,7 @@
 
 		/* Modal Content */
 		.modal-content {
-    		background-color: #fefefe;
+    		background-color: #fbfbdb;
     		margin: auto;
     		padding: 10px;
     		border: 1px solid #888;
@@ -133,7 +133,7 @@
 			var btn = document.createElement("button");
 			btn.setAttribute("class", 'picbtn');
 			btn.setAttribute("style", "transform: rotate(" + (Math.random() - .5) * 7 + "deg)"); //Let's Gooooooo
-			// btn.setAttribute("style", "Background-color: #FFF384; border-style: solid");
+			// btn.setAttribute("style", "Background-color: #fbfbdb; border-style: solid");
 			
 			//Image setup
 			var img = document.createElement("canvas");
@@ -331,9 +331,6 @@
 			modal3.style.display = "none";
     	}
 	}
-	
-	
-	
 	
 </script>
 </body>
