--- a/coloring/static/css/main.css
+++ b/coloring/static/css/main.css
@@ -1,5 +1,6 @@
 /* draw pad */
-.padButton{
+
+.padButton {
     background-color: #ffDDD2;
     color: black;
     border-width: .3vh;
@@ -11,11 +12,11 @@
     line-height: 16.6vw;
 }
 
-.padIcon{
+.padIcon {
     height: 50px;
 }
 
-#psheet{
+#psheet {
     position: absolute;
     top: 11vh;
     left: 4vw;
@@ -25,19 +26,20 @@
     transform: rotate(-2.1deg);
 }
 
-.icon{
+.icon {
     position: relative;
     padding-top: 5vh;
 }
 
-#undoButton{
-    color: rgba(0,0,0,.5);
-}
-#redoButton{
-    color: rgba(0,0,0,.5);
+#undoButton {
+    color: rgba(0, 0, 0, .5);
 }
 
-.colorButton{
+#redoButton {
+    color: rgba(0, 0, 0, .5);
+}
+
+.colorButton {
     color: black;
     text-shadow: -2px -2px 0 #FFF, 2px -2px 0 #FFF, -2px 2px 0 #FFF, 2px 2px 0 #FFF;
     border-width: .3vh;
@@ -48,7 +50,7 @@
     line-height: 16.6vw;
 }
 
-#newPage{
+#newPage {
     position: relative;
     top: -74.7vh;
     left: 79.5vw;
@@ -62,55 +64,62 @@
 }
 
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  }
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
+}
 
-  /* Modal Content/Box */
+
+/* Modal Content/Box */
+
 .modal-content {
-    background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
+    background-color: #fbfbdb;
+    margin: 15% auto;
+    /* 15% from the top and centered */
     border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
-  }
-  
-  
-  .close:hover,
-  .close:focus {
+    width: 80%;
+    /* Could be more or less, depending on screen size */
+}
+
+.close:hover,
+.close:focus {
     color: black;
     text-decoration: none;
     cursor: pointer;
-  }
-
-
-
-
-
+}
 
 
 /* home screen */
-#startPaper{
+
+#startPaper {
     width: 80%;
     height: 95%;
-    margin:auto;
-    background: #FFF384;
+    margin: auto;
+    background: #fbfbdb;
     border: 2px solid #000000;
     box-sizing: border-box;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.25);
     transform: rotate(-4.1deg);
 }
 
-#paperInterior{
+#paperInterior {
     color: black;
-    text-decoration: none; 
+    text-decoration: none;
     background-color: none;
     transform: rotate(4.1deg);
     margin: auto;
@@ -119,38 +128,37 @@
     padding-top: 4.5vh;
 }
 
-#startButton{
-    background: #FFF384;
+#startButton {
+    background: #fbfbdb;
 }
 
-
-#galleryButton{
-    
+#galleryButton {
     border-style: solid;
     border-width: .3vh;
     font-size: 16vw;
     text-align: center;
 }
 
+
 /* gallery */
-.postItPic{
-    /* background-color: #FFF384; */
+
+.postItPic {
+    /* background-color: #fbfbdb; */
     border-bottom-style: dashed;
     border-bottom-width: .3vh;
-    
 }
 
-.postItTime{
+.postItTime {
     text-align: center;
     font-size: 3vh;
 }
 
-.picbtn{
-    background-color: #FFF384;
+.picbtn {
+    background-color: #fbfbdb;
     border-style: solid;
     border-color: black;
     border-width: .3vh;
     height: 25vh;
     width: 25vh;
-    box-shadow: .5vh .5vh rgba(0,0,0,.5);
+    box-shadow: .5vh .5vh rgba(0, 0, 0, .5);
 }
