--- a/coloring/templates/coloring/colorPicker.html
+++ b/coloring/templates/coloring/colorPicker.html
@@ -49,6 +49,7 @@
 			padding: 5px;
 			margin: 10px 20px 10px 10px;
             transform: skew(-20deg);
+            position: relative;
 		}
         .parallelogramLarge {
             width: 120px;
@@ -60,13 +61,14 @@
             filter: drop-shadow(5px 5px 10px black);
         }
         .parallelogramLong {
-            width: 120px;
-			height: 200px;
+            width: 800px;
+			height: 180px;
 			background: #f1f1f1;
 			padding: 5px;
 			margin: 10px 20px 20px 10px;
             transform: skew(-20deg) translateY(-30px) scale(1.05);
             filter: drop-shadow(5px 5px 10px black);
+            position: relative;
         }
         
 	</style>
@@ -75,14 +77,14 @@
 	<div class="container-fluid">
         <div class="row align-items-center" id = 'titlePlate' style = "border: 5px solid #000000;">
 			<div class="col-2">
-				<a id = "exit" onclick = "saveCurrentColor" href="new_interaction" class = 'btn btn-secondary d-flex justify-content-center' rolw = 'button' aria-pressed = 'true'>
+				<a id = "exitColorPicker" href="new_interaction" class = 'btn btn-secondary d-flex justify-content-center' rolw = 'button' aria-pressed = 'true'>
 					<svg xmlns="http://www.w3.org/2000/svg" width="120" height="120" fill="currentColor" class="bi bi-x-circle-fill" viewBox="0 0 16 16">
                         <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z"/>
                     </svg>
 				</a>
 			</div>
 			<div class="col-10 d-flex justify-content-center" style = "border-left: 5px solid #000000">
-				<h1 style = "font-size: 8rem"> Color Picker </h1>
+				<h1 style = "font-size: 8rem; color: #006d77"> Color Picker </h1>
 			</div>
         </div>
 	</div>
@@ -90,13 +92,13 @@
         <div style="padding: 20px 50px 30px 50px;">
             <div class = "container-fluid">
                 <div id = "selectedColorDisplay" class = "row d-flex justify-content-center" style = "border: 5px solid #000000">
-                    <h1 style = "font-size: 5rem; -webkit-text-stroke: 2px black; color: white;"> Selected Color </h1>
+                    <h1 style = "font-size: 6rem; -webkit-text-stroke: 1px black; color: white;"> Selected Color </h1>
                 </div>
             </div>
         </div>
         <div style="padding: 0 50px 50px 50px;">
             <div class = 'container-fluid' style="height: 80vh">
-                <div class = "row" style = "height: 14%">
+                <div class = "row parallelogramLong" style = "height: 14%">
                     <div id = "#FF0000" onclick = "color('#FF0000')" class = "col parallelogram" style = 'background-color: #FF0000' ></div>
                     <div id = "#FF8181" onclick = "color('#FF8181')" class = "col parallelogram" style = 'background-color: #FF8181'></div>
                     <div  id = "#9C0303" onclick = "color('#9C0303')" class = "col parallelogram" style = 'background-color: #9C0303'></div>
@@ -137,13 +139,13 @@
 
 <script>
     window.onload = function() {
-        var currentColor = sessionStorage.getItem("currentColor");
+        var currentColor = sessionStorage.getItem("color");
         if (currentColor == null) {
             currentColor = "#FF0000";
         }
         document.getElementById("selectedColorDisplay").style.backgroundColor = currentColor;
+        document.getElementById(currentColor).className = "col parallelogramLarge";
     }
-    
 	var savedColor;
     function color(hex) {
         document.getElementById(hex).className = "col parallelogramLarge";
@@ -152,15 +154,14 @@
         deselect();
         saveToNewInteraction();
  	}
-
     const allColors = ["#FF0000", "#FF8181", "#9C0303", 
                     "#FF8A00", "#FFC581", "#904E00",
                     "#FAFF00", "#FFF492", "#A99801", 
                     "#05FF00", "#AEFF92", "#009806",  
                     "#00A3FF", "#9CDBFF", "#0075B7",
                     "#9E00FF", "#DDA6FF", "#4F0080", 
-                    "#000000", "#838383", "#FFFFFF"];
-	
+                    "#000000", "#838383", "#FFFFFF"
+                    ];
     function deselect() {
         for (let i = 0; i < 21; i++) {
             if (savedColor != allColors[i]) {
@@ -169,12 +170,8 @@
             }
         }
 	}
-
     function saveToNewInteraction() {
         sessionStorage.setItem("color", savedColor);
-    }
-    function saveCurrentColor() {
-        sessionStorage.setItem("currentColor", currentColor);
     }
 </script>
 </body>
